# sync-oneshot

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  notify.rs  slot.rs
