[package]
name = "sync-oneshot"
version = "0.0.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/locksmith-rs/sync-oneshot.git"
license = "MIT"
description = """
A minimal oneshot channel for synchronous Rust.
"""
documentation = "https://docs.rs/sync-oneshot"
keywords = ["channel", "oneshot", "message"]

[dependencies]
